syntax = "proto3";

package proto;
option go_package = "https://github.com/roberttkach/monitoring_ml;microservice";

service ImageProcessingService {
  rpc UploadImage (UploadImageRequest) returns (UploadImageResponse) {}
  rpc DownloadImage (DownloadImageRequest) returns (DownloadImageResponse) {} // Добавлено
  rpc ProcessImage (ProcessImageRequest) returns (ProcessImageResponse) {}
  rpc GetNumbers (GetNumbersRequest) returns (GetNumbersResponse) {}
  rpc SendMetrics (SendMetricsRequest) returns (SendMetricsResponse) {}
  rpc LogMetrics (LogMetricsRequest) returns (LogMetricsResponse) {}
}

message UploadImageRequest {
  bytes image = 1;
}

message UploadImageResponse {
  string image_id = 1;
}

message DownloadImageRequest { // Добавлено
  string image_id = 1;
}

message DownloadImageResponse { // Добавлено
  bytes image = 1;
}

message ProcessImageRequest {
  string image_id = 1;
}

message ProcessImageResponse {
  string processed_image_id = 1;
}

message GetNumbersRequest {
  string processed_image_id = 1;
}

message GetNumbersResponse {
  repeated int32 numbers = 1;
}

message SendMetricsRequest {
  map<string, string> metrics = 1;
}

message SendMetricsResponse {
  string status = 1;
}

message LogMetricsRequest {
  map<string, string> metrics = 1;
}

message LogMetricsResponse {
  string status = 1;
}